# TradeBase

./: .gitignore  CMakeLists.txt  README.md  TradeBaseConfig.cmake.in  TradeBaseConfigVersion.cmake.in
Alpha/: CMakeLists.txt
Alpha/Indicators/: SMA.cpp
Alpha/Indicators/inc/: Indicator.h  SMA.h
Alpha/Strategies/: HalvedPositionSMA.cpp  LastClose.cpp  SMACrossover.cpp  Strategy.cpp
Alpha/Strategies/inc/: HalvedPositionSMA.h  LastClose.h  SMACrossover.h  Strategy.h
Backtesting/: CMakeLists.txt  LastCloseBacktest.cpp  SMACrossBacktest.cpp
Platform/: Account.cpp  Brain.cpp  Broker.cpp  CMakeLists.txt  Data.cpp  DataArray.cpp  DataStruct.cpp  Indicator.cpp  Position.cpp  TimeStamp.cpp
Platform/inc/: Account.h  BackTrader.h  Brain.h  Broker.h  CommissionSchemes.h  Contract.h  Data.h  DataArray.h  DataStruct.h  DataTypes.h  Execution.h  Indicator.h  Order.h  Position.h  Strategy.h  TimeStamp.h  Util.hpp  matplotlibcpp.h
Test/: CMakeLists.txt  HPSMABacktest.cpp  LastCloseBacktest.cpp  SMACrossBacktest.cpp  TestBench.py
Testing/: CMakeLists.txt  HPSMABacktest.cpp  LastCloseBacktest.cpp  SMACrossBacktest.cpp  TestBench.py
